--- a/src/JavascriptMicroflowButton/widget/template/JavascriptMicroflowButton.html
+++ b/src/JavascriptMicroflowButton/widget/template/JavascriptMicroflowButton.html
@@ -1,4 +1,3 @@
-<button type="button" class="btn mx-button btn-default" tabindex="0" data-dojo-attach-point="theButton">
-	
-</button>
+<button type="button" class="btn btn-default" data-dojo-attach-point="theButton">
 
+</button>
